--- a/src/localization/tr/commands/pseudo/earthquake.jsonc
+++ b/src/localization/tr/commands/pseudo/earthquake.jsonc
@@ -14,7 +14,7 @@
             "other_earthquakes": "Diğer Depremler İçin",
             "source": "Kaynak",
             "time": "Zaman",
-            "title": "Yeni Deprem Uyarısı!"
+            "title": "Yeni Deprem Uyarısı!",
         },
         "subcommands": {},
         "events": {},
@@ -24,14 +24,14 @@
                 "display_name": "Büyüklük Limiti",
                 "placeholder": "Minimum deprem büyüklüğünü seçin",
                 "pretty_name": "Büyüklük Limiti",
-                "parameters": {}
+                "parameters": {},
             },
             "setnotificationchannel": {
                 "description": "Deprem bildirimlerinin gönderileceği kanalı ayarlar.",
                 "display_name": "Bildirim Kanalı",
                 "placeholder": "Deprem bildirim kanalı seçin",
                 "pretty_name": "Bildirim Kanalı",
-                "parameters": {}
+                "parameters": {},
             },
             "setregioncode": {
                 "description": "Deprem bildirimleri konum bilgisi için bölge kodunu ayarlar.",
@@ -42,9 +42,9 @@
                     "region_code": {
                         "name": "Bölge Kodu",
                         "description": "Deprem bildirimi konum bilgisi için bölge kodu.",
-                        "placeholder": "tr"
-                    }
-                }
+                        "placeholder": "tr",
+                    },
+                },
             },
             "setseismicportalapiurl": {
                 "description": "Kullanılacak Seismic Portal API URL'sini ayarlar.",
@@ -55,15 +55,22 @@
                 "parameters": {
                     "seismicportal_api_url": {
                         "name": "Seismic Portal API URL'si",
-                        "placeholder": "https://www.seismicportal.eu/fdsnws/event/1/query?..."
-                    }
-                }
+                        "placeholder": "https://www.seismicportal.eu/fdsnws/event/1/query?...",
+                    },
+                },
+            },
+            "setpingrole": {
+                "description": "Her deprem bildiriminde etiketlenecek rolü ayarlar.",
+                "display_name": "Etiketlenecek Rol",
+                "placeholder": "Etiketlenecek bir rol seçin",
+                "pretty_name": "Etiketlenecek Rol",
+                "parameters": {},
             },
             "toggle": {
                 "description": "Sunucuda deprem bildirici sistemini etkinleştirir veya devre dışı bırakır.",
                 "pretty_name": "Deprem Bildirici Aktifliği",
-                "parameters": {}
-            }
+                "parameters": {},
+            },
         },
         "logging": {
             "debug": {
@@ -71,47 +78,51 @@
                     "invalid_url": "\"{guild}\" sunucusundaki \"{user}\" kullanıcısı tarafından sağlanan Sismik Portal API URL'si geçersiz: \"{url}\".",
                     "channel": {
                         "start": "\"{guild}\" sunucusunda Deprem Bildirici bildirim kanalı değiştirme işlemi başlatıldı.",
-                        "success": "\"{guild}\" sunucusunda Deprem Bildirici bildirim kanalı başarıyla \"{channel}\" olarak değiştirildi."
+                        "success": "\"{guild}\" sunucusunda Deprem Bildirici bildirim kanalı başarıyla \"{channel}\" olarak değiştirildi.",
                     },
                     "modalsubmit": {
                         "start": "\"{guild}\" sunucusunda Deprem Bildirici modal ayarı değiştirme işlemi başlatıldı.",
-                        "success": "\"{guild}\" sunucusunda Deprem Bildirici modal ayarı başarıyla değiştirildi."
+                        "success": "\"{guild}\" sunucusunda Deprem Bildirici modal ayarı başarıyla değiştirildi.",
                     },
                     "selectmenu": {
                         "start": "\"{guild}\" sunucusunda Deprem Bildirici seçim menüsü ayarı değiştirme işlemi başlatıldı.",
-                        "success": "\"{guild}\" sunucusunda Deprem Bildirici seçim menüsü ayarı başarıyla değiştirildi."
+                        "success": "\"{guild}\" sunucusunda Deprem Bildirici seçim menüsü ayarı başarıyla değiştirildi.",
+                    },
+                    "role": {
+                        "start": "\"{guild}\" sunucusunda Deprem Bildirici etiketlenecek rol değiştirme işlemi başlatıldı.",
+                        "success": "\"{guild}\" sunucusunda Deprem Bildirici etiketlenecek rol başarıyla \"{role}\" olarak değiştirildi.",
                     },
                     "toggle": {
                         "start": "\"{guild}\" sunucusunda Deprem Bildirici sistemini açma/kapatma işlemi başlatıldı.",
-                        "success": "\"{guild}\" sunucusunda Deprem Bildirici sistemi başarıyla \"{toggle}\" olarak güncellendi."
-                    }
+                        "success": "\"{guild}\" sunucusunda Deprem Bildirici sistemi başarıyla \"{toggle}\" olarak güncellendi.",
+                    },
                 },
                 "configuration": {
-                    "missing": "Deprem komutu için herhangi bir yapılandırma bulunamadı."
+                    "missing": "Deprem komutu için herhangi bir yapılandırma bulunamadı.",
                 },
                 "cronjob": {
                     "start": "Deprem kontrolü başlatılıyor...",
-                    "success": "{guild} sunucularında deprem kontrolü tamamlandı. {count} deprem bildirildi."
+                    "success": "{guild} sunucularında deprem kontrolü tamamlandı. {count} deprem bildirildi.",
                 },
                 "prepare": {
                     "start": "\"{guild}\" sunucusu için Deprem Bildirici komutu hazırlanıyor.",
-                    "success": "\"{guild}\" sunucusu için Deprem Bildirici komutu başarıyla hazırlandı."
-                }
+                    "success": "\"{guild}\" sunucusu için Deprem Bildirici komutu başarıyla hazırlandı.",
+                },
             },
             "info": {},
             "warn": {
                 "settings": {
-                    "invalid_url": "\"{guild}\" sunucusundaki \"{user}\" kullanıcısı tarafından sağlanan Seismic Portal API URL'si geçersiz: \"{url}\"."
-                }
+                    "invalid_url": "\"{guild}\" sunucusundaki \"{user}\" kullanıcısı tarafından sağlanan Seismic Portal API URL'si geçersiz: \"{url}\".",
+                },
             },
             "error": {},
             "log": {
                 "prepare": {
                     "database": {
-                        "success": "\"{guild}\" sunucusu için Deprem Bildirici komutu ayarları veritabanına başarıyla işlendi."
-                    }
-                }
-            }
-        }
-    }
+                        "success": "\"{guild}\" sunucusu için Deprem Bildirici komutu ayarları veritabanına başarıyla işlendi.",
+                    },
+                },
+            },
+        },
+    },
 }
