--- a/src/localization/tr/commands/pseudo/earthquake.jsonc
+++ b/src/localization/tr/commands/pseudo/earthquake.jsonc
@@ -64,6 +64,7 @@
                 "display_name": "Etiketlenecek Rol",
                 "placeholder": "Etiketlenecek bir rol seçin",
                 "pretty_name": "Etiketlenecek Rol",
+                "clear_label": "Etiketlenecek Rolü Kaldır",
                 "parameters": {},
             },
             "toggle": {
